# adiutor

./: .project  .pydevproject  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/thalesians/adiutor/: checks.py  conditions.py  config.py  conversions.py  exceptions.py  intervals.py  jupyter_utils.py  latex_utils.py  number_theory.py  numpy_checks.py  numpy_utils.py  objects.py  pandas_utils.py  python_utils.py  randomness.py  strings.py  system_utils.py  time_consts.py  timer.py  times.py  utils.py  visual.py
src/thalesians/adiutor/stats/: __init__.py  calculators.py
test/: test_checks.py  test_conditions.py  test_conversions.py  test_exceptions.py  test_latex_utils.py  test_number_theory.py  test_numpy_utils.py  test_pandas_utils.py  test_python_utils.py  test_randomness.py  test_stats.py  test_stats_calculators.py  test_strings.py  test_timer.py  test_times.py  test_utils.py
