[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thalesians.adiutor"
version = "0.0.5"
authors = [
	{ name="Paul Alexander Bilokon", email="paul@thalesians.com" },
	{ name="Abir Sridi", email="abir.sridi@thalesians.com" },
]
description = "A collection of general-purpose Python utilities designed for reuse across multiple projects"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
    "pytz>=2024.2",
    "unidecode>=1.3.8",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "sympy>=1.13.3",
    "jinja2>=3.1.4",
]

[project.urls]
Homepage = "https://github.com/thalesians/adiutor/"
Issues = "https://github.com/thalesians/adiutor/issues"
